Squash and Merge /fix/button visibility
Fix for https://github.com/Rise-Vision/rise-vision-apps/issues/405

--- a/src/sections/storage-full.scss
+++ b/src/sections/storage-full.scss
@@ -1,5 +1,4 @@
-.storage-full,
-.storage-modal {
+.storage-full {
   .table {
     .folder,
     .file {
@@ -54,11 +53,23 @@
   }
 }
 
-.storage-full {
+.container.storage-full {
   .scrollable-list {
     padding: 4px;
     max-height: calc(100vh - 300px);
     width: 100%;
+  }
+}
+
+.modal-body.storage-full {
+  .scrollable-list {
+    padding: 4px;
+    max-height: calc(100vh - 380px);
+    width: 100%;
+      @media (max-width: $screen-sm){ 
+        max-height: calc(100vh - 460px);
+        min-height: 210px;
+      }
   }
 }
 
